fix: inject version via ldflags at build time
- Changed Version variable to be injected via ldflags instead of hardcoded
- Updated GitHub Actions workflow to pass -ldflags with version
- Added -s -w flags for smaller binary size
- Default version is 'dev' for local builds without ldflags

This fixes the issue where installed agent shows old version (v1.2.14)
instead of the actual release version.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,10 +39,12 @@ jobs:
           if [ "${{ matrix.goos }}" = "windows" ]; then
             EXT=".exe"
           fi
-          # Build binary with specific name
+          # Get version from tag
+          VERSION="${{ github.event.inputs.tag || github.ref_name }}"
+          # Build binary with specific name and inject version
           FILENAME="omnipulse-agent-${{ matrix.goos }}-${{ matrix.goarch }}${EXT}"
           CGO_ENABLED=0 GOOS=${{ matrix.goos }} GOARCH=${{ matrix.goarch }} \
-            go build -o "dist/$FILENAME" .
+            go build -ldflags "-s -w -X main.Version=${VERSION}" -o "dist/$FILENAME" .
             
       - name: Upload artifact
         uses: actions/upload-artifact@v4
